RESOLVED FIXED268741
[CSS Container Queries] Queries with unknown features should not select a container
https://bugs.webkit.org/show_bug.cgi?id=268741
Summary [CSS Container Queries] Queries with unknown features should not select a con...
Antti Koivisto
Reported 2024-02-05 05:54:32 PST
New behavior after https://github.com/w3c/csswg-drafts/issues/7551 "If the <container-query> contains unknown or unsupported container features, no query container will be selected."
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-05 05:54:45 PST
Antti Koivisto
Comment 2 2024-02-05 06:02:09 PST
EWS
Comment 3 2024-02-05 09:13:17 PST
Committed 274098@main (39f36da26b76): <https://commits.webkit.org/274098@main> Reviewed commits have been landed. Closing PR #23855 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.