[CSS Container Queries] Queries with unknown features should not select a container https://bugs.webkit.org/show_bug.cgi?id=268741 rdar://122307175

Reviewed by Alan Baradlay.

https://github.com/w3c/csswg-drafts/issues/7551 changed the behavior for unknown features:

"If the <container-query> contains unknown or unsupported container features, no query container will be selected."

* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/container-queries/container-selection-unknown-features-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/container-queries/query-evaluation-expected.txt:
* Source/WebCore/css/ContainerQuery.h:
* Source/WebCore/css/ContainerQueryParser.cpp:
(WebCore::ContainerQueryParser::consumeContainerQuery):

Traverse the features and see if we have anything unknown along with collecting the axis requirements.

(WebCore::ContainerQueryParser::consumeFeature): Deleted.

Traverse after consuming instead.

* Source/WebCore/css/ContainerQueryParser.h:
(WebCore::ContainerQueryParser::ContainerQueryParser):
* Source/WebCore/css/query/GenericMediaQueryTypes.h:
(WebCore::MQ::traverseFeatures):

Also traverse GeneralEnclosed which is what unknown features turn into.

* Source/WebCore/style/ContainerQueryEvaluator.cpp:
(WebCore::Style::ContainerQueryEvaluator::featureEvaluationContextForQuery const):

Bail out for unknown features.

Canonical link: https://commits.webkit.org/274098@main